# task_workspace

./: All_three.cpp  CMakeLists.txt  Factory_method.cpp  Makefile  Observer.cpp  Strategy.cpp  a.out  abstraction.cpp  calc  calculator.cpp  calculator.h  encapsulation.cpp  exec1  exec2  exec3  exec4  exec5  exec6  exec7  exec8  exec9  four_pillars.cpp  inheritance.cpp  main.cpp  polymorphism.cpp  shape.cpp  shape.h  test_main.cpp
